test/code/test_class_invoke.out
Hello world!
Hello world!

Fatal error: Function name must be a string in {{CWD}}/test/code/test_class_invoke.php on line 19
